package com.victor.lamontagne_api.model;

public enum Season {
    SUMMER,
    WINTER
}