package com.victor.lamontagne_api.model;

public enum Sky {
    SUNNY,
    PARTLY_CLOUDY,
    CLOUDY,
    SNOW,
    RAIN
}